# rnix-parser

./: .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  Cargo.toml  MIGRATING.md  README.md  default.nix  expect.sh  flake.nix  rust-toolchain.toml  rustfmt.toml  shell.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  test.yml
arenatree/: Cargo.toml
arenatree/src/: lib.rs  node.rs
benches/: all-packages.nix  all-packages.rs
examples/: dump-ast.rs  error-report.rs  format.rs  from-stdin.rs  list-fns.rs  preserve.rs  recursive.rs  size-of.rs  test-nixpkgs.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: lexer.rs  parser.rs
nix/: default.nix  sources.json
src/: ast.rs  display.rs  kinds.rs  lib.rs  macros.rs  nometa.rs  parser.rs  string_parsing.rs  tests.rs  token_set.rs  tokenizer.rs  types.rs  types2.rs  value.rs
src/ast/: expr_ext.rs  interpol.rs  nodes.rs  operators.rs  path_util.rs  str_util.rs  tokens.rs  types.rs  types_old.rs
src/parser/: children.rs  children_mut.rs  display.rs  generate-mut.sh  intoactualslowtree.rs  mod.rs  nometa.rs  recurse.rs  types.rs
src/utils/: arena.rs  macros.rs  mod.rs  stack.rs
test_data/: dynamic-attrs.nix  lambdas.nix  math.nix
test_data/general/: docs.expect  dynamic-attrs.expect  error.expect  ifs.expect  inherit.expect  interpolation.expect  interpolation.nix  (+11 more)
tests/: comments.nix  dynamic-attrs.nix  error.nix  ifs.nix  inherit.nix  interpolation.nix  isset.nix  lists.nix  meta.nix  pattern.nix  simple-set.nix  with-import-let-in.nix
(+391 files in other folders)
