[package]
authors = ["jD91mZM2 <me@krake.one>"]
description = "A Nix parser written in Rust"
edition = "2021"
license = "MIT"
name = "rnix"
readme = "README.md"
repository = "https://github.com/nix-community/rnix-parser"
version = "0.11.0-dev"

[[bench]]
harness = false
name = "all-packages"

[dependencies]
rowan = "0.15.0"

[dev-dependencies]
criterion = "0.3.0"
expect-test = "1.4.0"
