[package]
authors = ["jD91mZM2 <me@krake.one>"]
description = "A Nix parser written in Rust"
edition = "2021"
license = "MIT"
name = "rnix"
readme = "README.md"
repository = "https://github.com/nix-community/rnix-parser"
version = "0.13.0"

[[bench]]
harness = false
name = "all-packages"

[dependencies]
rowan = "0.16"

[dev-dependencies]
criterion = "0.8"
expect-test = "1.5.1"
